# my-test

./: LICENSE  README.md  index.html  main.py
Desktop/TjornOS-main/: Cargo.toml  README.md  codeviz-diagram-2025-03-11T17-08-06.drawio  commands.sh  compiler.rs  debug.rs  main.rs
Desktop/TjornOS-main/.github/workflows/: ci.yml
Desktop/TjornOS-main/ai/: core.rs
Desktop/TjornOS-main/ai/core/ml/: ml.rs
Desktop/TjornOS-main/api/: system.rs
Desktop/TjornOS-main/applications/: store.rs
Desktop/TjornOS-main/audio/: engine.rs
Desktop/TjornOS-main/automation/: scripting.rs
Desktop/TjornOS-main/bootloader/: boot.asm  main.rs  stage1.rs  stage2.rs
Desktop/TjornOS-main/compatibility/: wine.rs
Desktop/TjornOS-main/crates/tjorn-ai/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-ai-ml/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-ai-ml/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-ai/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-audio/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-audio/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-compression/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-compression/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-containers/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-containers/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-core/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-core/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-crypto/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-crypto/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-db/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-db/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-debug/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-debug/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-drivers/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-drivers/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-formats/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-formats/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-fs/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-fs/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-gui/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-gui/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-kernel/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-kernel/src/: lib.rs
Desktop/TjornOS-main/crates/tjorn-memory/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-monitoring/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-multimedia/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-network/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-network~/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-physics/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-protocols/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-render/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-resources/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-security/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-speech/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-text/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-virtualization/: Cargo.toml
Desktop/TjornOS-main/crates/tjorn-vision/: Cargo.toml
Desktop/TjornOS-main/crypto/: base.rs
Desktop/TjornOS-main/desktop/environment/: desktop_environment.rs
Desktop/TjornOS-main/desktop/workspaces/: workspace_manager.rs
Desktop/TjornOS-main/development/ide/: ide_core.rs  mod.rs
Desktop/TjornOS-main/drivers/: keyboard.c
Desktop/TjornOS-main/drivers/disk/: ata.c  disk_manager.rs
Desktop/TjornOS-main/emulation/: emulator_core.rs
Desktop/TjornOS-main/filesystem/: base_fs.rs  filesystem_core.rs
Desktop/TjornOS-main/gaming/: mod.rs
Desktop/TjornOS-main/graphics/: graphics_core.rs
Desktop/TjornOS-main/graphics/lighting/: lighting_system.rs
Desktop/TjornOS-main/graphics/particles/: mod.rs
Desktop/TjornOS-main/graphics/post_processing/: post_processor.rs
Desktop/TjornOS-main/graphics/renderer/: mod.rs
Desktop/TjornOS-main/gui/desktop/: desktop_core.rs
Desktop/TjornOS-main/gui/lightweight/: light_desktop.rs
Desktop/TjornOS-main/gui/optimization/: gui_optimizer.rs
Desktop/TjornOS-main/gui/theme/: zen_theme.rs
Desktop/TjornOS-main/gui/window_system/: window_system_core.rs
Desktop/TjornOS-main/hub/platform/: mod.rs
Desktop/TjornOS-main/input/: system.rs
Desktop/TjornOS-main/kernel/: init.rs  main.rs
Desktop/TjornOS-main/kernel/core/: core.rs  mod.rs
Desktop/TjornOS-main/kernel/fs/: fs.rs
Desktop/TjornOS-main/kernel/interrupts/: handlers.rs  idt.rs
Desktop/TjornOS-main/kernel/memory/: allocator.rs  memory.rs  paging.rs
Desktop/TjornOS-main/kernel/network/: mod.rs
Desktop/TjornOS-main/kernel/process/: process.rs
Desktop/TjornOS-main/kernel/scheduler/: mod.rs
Desktop/TjornOS-main/kernel/security/: audit.rs  encryption.rs  firewall.rs  kernel_protection.rs  sandbox.rs
Desktop/TjornOS-main/kernel/virtualization/: hypervisor.rs
Desktop/TjornOS-main/multimedia/: multimedia.rs
Desktop/TjornOS-main/network/: core.rs  network.rs
Desktop/TjornOS-main/network/security/: security.rs
Desktop/TjornOS-main/package/: manager.rs
Desktop/TjornOS-main/privacy/core/: core.rs
Desktop/TjornOS-main/profiling/: profiling.rs
Desktop/TjornOS-main/recovery/core/: core.rs
Desktop/TjornOS-main/scripts/: create_bootable.sh
Desktop/TjornOS-main/security/: access_control.rs  authentication.rs  core.rs  security.rs  security_core.rs  threat_detection.rs
Desktop/TjornOS-main/security/encryption/: cipher.rs  key_manager.rs  quantum.rs
Desktop/TjornOS-main/src/boot/: mod.rs
Desktop/TjornOS-main/sync/ecosystem/: ecosystem.rs
Desktop/TjornOS-main/system/backup/: backup.rs
Desktop/TjornOS-main/system/devices/: devices.rs
Desktop/TjornOS-main/system/filesystem/: filesystem.rs
Desktop/TjornOS-main/system/notifications/: notifications.rs
Desktop/TjornOS-main/system/resources/: resources.rs
Desktop/TjornOS-main/terminal/bash/: bash.rs
Desktop/TjornOS-main/tests/: boot_tests.rs  integration_tests.rs  security_tests.rs
Desktop/TjornOS-main/userspace/gui/: window_manager.cpp
Desktop/TjornOS-main/userspace/shell/: shell.py
Desktop/TjornOS-main/userspace/terminal/: terminal.rs
(+83 files in other folders)
